tests/ui-nightly/transmute-mut-dst-not-nocell.stderr
error[E0277]: the trait bound `Dst: NoCell` is not satisfied
  --> tests/ui-nightly/transmute-mut-dst-not-nocell.rs:24:35
   |
24 | const DST_NOT_NO_CELL: &mut Dst = transmute_mut!(&mut Src);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                   |
   |                                   the trait `NoCell` is not implemented for `Dst`
   |                                   required by a bound introduced by this call
   |
   = help: the following other types implement trait `NoCell`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `AssertDstIsNoCell`
  --> tests/ui-nightly/transmute-mut-dst-not-nocell.rs:24:35
   |
24 | const DST_NOT_NO_CELL: &mut Dst = transmute_mut!(&mut Src);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsNoCell`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
